@@ -140,7 +140,11 @@ PROPERTYROB=;!witness;robbing the property of <T-NAME>;jail3;Robbery violates ou
 TAXEVASION=;!witness;evading taxes;jail1;Paying taxes and dieing are our solemn duties to the state.
 
 # The illegal skill-use laws have the following form:
-# <SKILL/ABILITY NAME>=<LOCATION RESTRICTIONS>;<FLAGS>;<NAME>;<PUNISHMENT>;<MESSAGE>
+# <SKILL/ABILITY NAME/SKILL_TYPE/SKILL_DOMAIN>=<LOCATION RESTRICTIONS>;<FLAGS>;<NAME>;<PUNISHMENT>;<MESSAGE>
+# SKILL_TYPES include: SKILL, SPELL, PRAYER, SONG, TRAP, PROPERTY, THIEF_SKILL, LANGUAGE, CHANT, COMMON_SKILL,
+#                      DISEASE, POISON, SUPERPOWER, ARCHON_SKILL, TECH_SKILL, etc.
+# SKILL_DOMAINS include: DIVINATION, ABJURATION, ILLUSION, INVOCATION/EVOCATION, ALTERATION, .. ARCHON, SINGING,
+#                       DANCING, PLAYING, DECEPTIVE, FIND/REMOVE_TRAPS, BINDING, etc.
 # Keys are same as under base laws above.
 THIEF_SWIPE=;;robbing <T-NAME>;jail2;Swiping violates our high moral code.
 THIEF_STEAL=;;robbing <T-NAME>;jail3;Stealing violates our high moral code.
